<resources>
    <string name="app_name" translatable="false">Schools365Teacher</string>

    <!-- Font awesome -->
    <string name="font_awesome_student_graduate" translatable="false">&#xf501;</string>
    <string name="font_awesome_class_timetable" translatable="false">&#xf03a;</string>
    <string name="font_awesome_news" translatable="false">&#xf1ea;</string>
    <string name="font_awesome_megaphone" translatable="false">&#xf0a1;</string>
    <string name="font_awesome_exam" translatable="false">&#xf0a1;</string>
    <string name="font_awesome_student_attendance" translatable="false">&#xf46c;</string>
    <string name="font_awesome_attendance_by_date" translatable="false">&#xf073;</string>
    <string name="font_awesome_analytics" translatable="false">&#xf643;</string>
    <string name="font_awesome_test_paper" translatable="false">&#xf46d;</string>
    <string name="font_awesome_notice_board" translatable="false">&#xf46d;</string>
    <string name="font_awesome_send_message" translatable="false">&#xf1d8;</string>
    <string name="font_awesome_edit_message" translatable="false">&#xf303;</string>
    <string name="font_awesome_delete_message" translatable="false">&#xf2ed;</string>


    <string name="hostelRoomNo">Room No</string>
    <string name="name">Name </string>

    <string name="class_timetable">Class TimeTable</string>
    <string name="class_title">Class</string>
    <string name="student_details">Student Details</string>
    <string name="student">Student</string>
    <string name="attendance">Attendance</string>
    <string name="student_attendance">Student Attendance</string>
    <string name="date_attendance">Date Attendance</string>
    <string name="attendance_report">Attendance Report</string>
    <string name="our_news">Our News</string>
    <string name="examination">Examination</string>
    <string name="communication">Communication</string>
    <string name="section">Section</string>
    <string name="continue_">Continue</string>
    <string name="exam_list">Exam List</string>
    <string name="exam_schedual">Exam Schedual</string>
    <string name="marks_registered">Marks Registered</string>
    <string name="marks_grade">Marks Grade</string>
    <string name="notice_board">Notice Board</string>
    <string name="send_message">Send Message</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">School Name</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="news">News</string>

    <string name="menu_home">Home</string>
    <string name="roll_number">Roll Number</string>
    <string name="admission_number">Admission Number</string>
    <string name="ret">RET</string>
    <string name="twenty">20</string>
    <string name="two_thousand">2032</string>
    <string name="no">No</string>
    <string name="class_date">Class Date</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="private_title">Private</string>
    <string name="public_title">Public</string>
    <string name="all_teacher_title">All Teacher</string>
    <string name="my_profile">My Profile</string>
    <string name="dashboard">Dashboard</string>
    <string name="help">Help</string>
    <string name="about_me">About_me</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="event_title">Event Title</string>
    <string name="description">Description</string>
    <string name="event_date">Event Date</string>
    <string name="event_color">Event Color</string>
    <string name="event_type">Event Type</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="present_title">Present</string>
    <string name="late_title">Late</string>
    <string name="abscence">Absene</string>
    <string name="title">Title</string>


    <string name="half_day">Half Day</string>

    <!--  by Walaa-->
    <string name="pref_file" translatable="false">pref_file</string>
    <string name="pref_class_section" translatable="false">class_section</string>
    <string name="title_activity_timetable_tabsday" translatable="false">TimetableTabsdayActivity</string>
    <string name="tab_sunday" translatable="false">Sunday</string>
    <string name="tab_monday" translatable="false">Monday</string>
    <string name="tab_tuesday" translatable="false">Tuesday</string>
    <string name="tab_wednesday" translatable="false">Wednesday</string>
    <string name="tab_thursday" translatable="false">Thursday</string>
    <string name="tab_friday" translatable="false">Friday</string>
    <string name="tab_saturday" translatable="false">Saturday</string>
    <string name="Order_By_admission_number">Order by admission number</string>
    <string name="Order_By_roll_Number">Order by roll number</string>
    <string name="apply">Apply</string>
    <string name="note">Note</string>
    <string name="one">1</string>
    <string name="order_by_number">Order By Number</string>
    <string name="search">Search</string>
    <string name="text">Text</string>
    <string name="Teacher">Teacher</string>
    <string name="message">Message</string>
    <string name="content">Content</string>
    <string name="select_date">Select Date</string>


    <string name="welcom">welcome To My World</string>
    <string name="login">Login</string>
    <string name="example">Example@gmail.com</string>
    <string name="present">Present</string>
    <string name="none">None</string>
    <string name="halfday">Half day</string>
    <string name="absent">Absent</string>
    <string name="late">Late</string>
    <string name="attendancetoday">Attendance To Day</string>
    <string name="attendancbydate">Attendanc By Date</string>
    <string name="attendancereport">Attendance Report</string>
    <string name="holiday">Holiday</string>
    <string name="countinu">Continue</string>
    <string name="siences">Siences</string>
    <string name="room">Room</string>
    <string name="viewmarks">View Marks</string>
    <string name="teacher"> Teacher</string>
    <string name="changepassword"> Change Password</string>
    <string name="saveattendance">Save Attendance </string>
    <string name="marks">Marks As Holiday  </string>
    <string name="gradeone">Grade 2  </string>
    <string name="hair">Hair Cleanliness </string>
    <string name="gradetwo">Grade 1/A </string>
    <string name="motherocc">Mother Occupation </string>
    <string name="fathername">Father Name </string>
    <string name="guardianname">Guardian Name</string>
    <string name="guardianacc">Guardian Occupation </string>
    <string name="fatherphone">Father Phone </string>

    <string name="guardianphone">Guardian Phone </string>
    <string name="mothername">Mother Name </string>
    <string name="motherename">Guardian Relation  </string>
    <string name="guardianrelation">Guardian Email</string>
    <string name="guardianemail">Mother Phone </string>
    <string name="fatherocc">Father Occupation</string>


    <string name="studentname">Student Name </string>
    <string-array name="guardian">
        <item>@string/motherocc</item>
        <item>@string/fathername</item>
        <item>@string/guardianname</item>
        <item>@string/guardianacc</item>
        <item>@string/fatherphone</item>
        <item>@string/guardianphone</item>
        <item>@string/motherename</item>
        <item>@string/guardianrelation</item>
        <item>@string/guardianemail</item>
        <item>@string/fatherocc</item>

    </string-array>
    <string name="father_details">Father and Guardian Details </string>

    <string name="sendmassege">Send Massege</string>
    <string name="addhomework">Add Homework </string>
    <string name="grade">Grade </string>
    <string name="marktwo">A</string>


    <!-- Font awesome -->


    <string name="font_awesome_student_graduate" translatable="false"></string>
    <string name="font_awesome_class_timetable" translatable="false"></string>
    <string name="font_awesome_news" translatable="false"></string>
    <string name="font_awesome_megaphone" translatable="false"></string>
    <string name="font_awesome_exam" translatable="false"></string>
    <string name="font_awesome_student_attendance" translatable="false"></string>
    <string name="font_awesome_attendance_by_date" translatable="false"></string>
    <string name="font_awesome_analytics" translatable="false"></string>
    <string name="font_awesome_test_paper" translatable="false"></string>
    <string name="font_awesome_notice_board" translatable="false"></string>
    <string name="font_awesome_send_message" translatable="false"></string>
    <string name="font_awesome_edit_message" translatable="false"></string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="aiman_alwiah">AIMAN ALWIAH</string>
    <string name="mohammad">mohammad</string>
</resources>
