<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_menu_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_gallery"
        android:icon="@drawable/ic_nav_menu_person"
        android:title="@string/my_profile" />
    <item
        android:id="@+id/nav_slideshow"
        android:icon="@drawable/ic_nav_menu_dashboard"
        android:title="@string/dashboard" />
    <item
        android:id="@+id/nav_tools"
        android:icon="@drawable/ic_nav_menu_help"
        android:title="@string/help" />
    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_nav_menu_about_me"
        android:title="@string/about_me" />
    <item
        android:id="@+id/nav_send"
        android:icon="@drawable/ic_nav_menu_settings"
        android:title="@string/settings" />

    <item
        android:id="@+id/nav_logout "
        android:icon="@drawable/ic_nav_menu_logout"
        android:title="@string/logout" />

</menu>
