<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="navigation_view">

        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/img_home"
                android:title="@string/menu_home" />

            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/img_login"
                android:title="@string/login" />

            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/img_setting"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/img_logout"
                android:title="@string/logout" />

        </group>

</menu>
