<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar_notification"
        layout="@layout/toolbar">

    </include>
    <include layout="@layout/layout_gard"
        />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/acet_event_title"
        style="@style/edittext_default"
        android:layout_marginTop="80dp"
        android:layout_height="wrap_content"
        android:hint="@string/event_title"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_15"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_90"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_05"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/acet_description"
        style="@style/edittext_default"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_25"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_90"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_05"
        app:layout_constraintTop_toBottomOf="@+id/acet_event_title" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/acet_date"
        style="@style/edittext_default"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/event_date"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_35"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_90"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_05"
        app:layout_constraintTop_toBottomOf="@+id/acet_description" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/actv_event_color"
        style="@style/textview_default"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/event_color"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_45"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_90"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_05"
        app:layout_constraintTop_toBottomOf="@+id/acet_date" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:weightSum="6"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_55"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_50"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_05"
        app:layout_constraintTop_toBottomOf="@+id/actv_event_color">


        <View
            style="@style/view_color"
            android:backgroundTint="@color/circle_blue_color" />

        <View
            style="@style/view_color"
            android:backgroundTint="@color/circle_red_color" />

        <View
            style="@style/view_color"
            android:backgroundTint="@color/circle_green_color" />

        <View
            style="@style/view_color"
            android:backgroundTint="@color/circle_brown_color" />

        <View
            style="@style/view_color"
            android:backgroundTint="@color/circle_orange_color" />

        <View
            style="@style/view_color"
            android:backgroundTint="@color/circle_pink_color" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        style="@style/textview_default"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/event_type"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_65"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_90"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_05"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_75"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_90"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_05"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/private_event"
            android:text="@string/private_title" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/public_event"
            android:text="@string/public_title" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/all_teacher_event"
            android:text="@string/all_teacher_title" />
    </RadioGroup>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/acb_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/gray"
        android:text="@string/cancel"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_85"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_40"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_05"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/acb_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/blue_noisy_dark"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_85"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_90"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_60"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>
