<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="413dp"
        android:layout_height="126dp"
        android:layout_marginBottom="450dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/actv_title"
                style="@style/textview_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/actv_message"
                style="@style/textview_default"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/message"
                app:layout_constraintEnd_toEndOf="@+id/actv_teacher"
                app:layout_constraintStart_toStartOf="@+id/actv_teacher"
                app:layout_constraintTop_toBottomOf="@+id/actv_teacher" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/actv_teacher"
                style="@style/textview_default"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Teacher"
                app:layout_constraintEnd_toEndOf="@+id/actv_title"
                app:layout_constraintStart_toStartOf="@+id/actv_title"
                app:layout_constraintTop_toBottomOf="@+id/actv_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>